fixed size on project logo on mobile, added overflow hidden to every page except project page

--- a/styles/_contact-page.scss
+++ b/styles/_contact-page.scss
@@ -1,3 +1,7 @@
+.contact-page {
+  overflow: hidden;
+}
+
 .contact-page-container {
   width: 100%;
   min-height: 100%;
